// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVersionSelect Displays empty when no versions available 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [MockFunction],
      "setWfModuleVersion": [MockFunction],
    }
  }
  isReadOnly={true}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={[MockFunction]}
  testing={true}
  updateWfModuleAction={[MockFunction]}
  versions={
    Object {
      "selected": null,
      "versions": Array [],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div
      className="open-modal t-f-blue content-3 ml-2"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 1`] = `
<DataVersionSelect
  api={
    Object {
      "loadWorkflow": [Function],
      "markDataVersionsRead": [MockFunction],
      "setWfModuleVersion": [MockFunction],
      "updateWfModule": [MockFunction],
    }
  }
  isReadOnly={false}
  markDataVersionsRead={[MockFunction]}
  notifications={true}
  revision={202}
  setClickNotification={[Function]}
  setDataVersionAction={[MockFunction]}
  testing={true}
  updateWfModuleAction={[MockFunction]}
  versions={
    Object {
      "selected": "2017-04-10 17:57:58.324Z",
      "versions": Array [
        Array [
          "2017-07-10 17:57:58.324Z",
          false,
        ],
        Array [
          "2017-06-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-05-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-04-10 17:57:58.324Z",
          true,
        ],
        Array [
          "2017-03-10 17:57:58.324Z",
          true,
        ],
      ],
    }
  }
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        2 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;
